[project]
name = "nearest_bars"
version = "0.1.0"
description = "Find nearest bars on map"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.18",
    "geopy>=2.5",
    "Flask>=3.1",
    "requests>=2.32",
    "environs>=11",
    "python-dotenv>=1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
